# market-helper

./: .env  .gitignore  flake.nix
.github/workflows/: ci.yml
crates/market-helper-core/: Cargo.toml
crates/market-helper-core/src/: lib.rs  tests.rs
crates/market-helper-server/: Cargo.toml
crates/market-helper-server/src/: main.rs
database/: market_helper.db  market_helper.db-shm  market_helper.db-wal  market_helper.sql
frontend/public/: index.html
frontend/src/: App.js  index.css
